--- a/style.css
+++ b/style.css
@@ -96,3 +96,54 @@ body{
     text-align: center;
     border-radius: 5px;
 }
+
+.what-i-do{
+    margin-top: 150px;
+}
+.what-i-do h1{
+    text-align: center;
+    margin-bottom: 50px;
+}
+.do-three{
+    display: flex;
+}
+.do-three div{
+    width: 30%;
+    box-shadow: 0 0 12px #0000002b;
+    border-radius: 3px;
+}
+.do-three img{
+    display: block;
+    padding-top: 30px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 8%;
+    margin-bottom: 10px;
+}
+.do-three h3{
+    text-align: center;
+    margin-bottom: 5px;
+}
+.do-three p{
+    text-align:center;
+    margin-bottom: 20px;
+    padding-bottom: 20px;
+}
+.web-develop{
+    margin-left: 100px;
+}
+.photoshop{
+    margin-right: 100px;
+}
+.left-margin{
+    margin-left: 30px;
+}
+
+
+
+.lets-work{
+    margin-top: 150px;
+}
+.lets-work h1{
+    text-align: center;
+}
