--- a/style.css
+++ b/style.css
@@ -226,9 +226,7 @@ body{
     margin-right: auto;
     width: 10%;
 }
-.inline{
-    display: inline-block;
-}
+
 .testimonial-p1{
     margin-bottom: 10px;
 }
@@ -236,4 +234,90 @@ body{
     margin-left: 30px;
     margin-right:30px;
     padding-bottom: 50px;
+}
+
+
+
+.contact-me-container{
+    display: flex;
+}
+#contact-me-title{
+    margin-top: 150px;
+    text-align: center;
+}
+.address{
+    width: 47%;
+    margin-left: 100px;
+    margin-top: 50px;
+}
+.sms-box{
+    width: 60%;
+    margin-right: 100px;
+}
+.contact-h4{
+    display: inline;
+    vertical-align: bottom;
+    margin-left: 15px;
+}
+.contact-p{
+    margin-left: 59px;
+}
+
+.phone{
+    margin-top: 20px;
+}
+.address-icon{
+    margin-top: 20px;
+}
+.sms-box{
+    margin-top: 50px;
+}
+#inputName{
+    width: 40%;
+    padding: 10px;
+    border: 0px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.185);
+}
+#inputEmail{
+    margin-left: 50px;
+    width: 40%;
+    padding: 10px;
+    border: 0px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.185);
+}
+#inputSub{
+    margin-top: 30px;
+    width: 91%;
+    padding: 10px;
+    border: 0px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.185);
+}
+#inputSMS{
+    margin-top: 30px;
+    width: 91%;
+    height: 120px;
+    padding: 10px;
+    border: 0px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.185);
+    vertical-align: top;
+}
+#message-btn{
+    margin-top: 30px;
+    background-color: #DC3545;
+    color: white;
+    padding:  10px 25px;
+    border: 0px;
+    border-radius: 5px;
+}
+
+
+.futtet{
+    margin-top: 100px;
+}
+.footer-text{
+    text-align: center;
 }
